Code added for Add-Expense functionality.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
 <!--The content below is only a placeholder and can be replaced.-->
-  <app-register></app-register>
+<!--<app-register></app-register>-->
+  <add-expense></add-expense>
+  
 
 
