--- a/src/app/register/register.component.css
+++ b/src/app/register/register.component.css
@@ -8,3 +8,12 @@ div{
 span{
     color :red;
 }
+nav{
+    background-color: #e3f2fd
+}
+
+well{
+    background-color: aqua;
+    align-self: center;
+   
+}
