--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,13 +1,32 @@
 <!--The content below is only a placeholder and can be replaced.-->
+<title> Registration of user.</title>
 <div>
-  <title> Registration of user.</title>
-  <h1>
-  User information.
-  </h1>
+    <div>
+        <div class="row">
+            <div class="col-lg-12">
+              <nav class="nav navbar-expand-lg navbar-light" >
+                 <div class="navbar-header">
+                 <a class="navbar-brand" (click)="onhome()">Expense Manager</a>
+                 </div>
+                
+                       <ul class="nav navbar-nav ml-auto" >
+                       <li class="nav-item " ><a class = "nav-link " routerLink="/login">Login </a></li>
+                       <li  class="nav-item"><a class ="nav-link "  routerLink="/register">Sign up</a></li>
+                       </ul> 
+             </nav>
+             </div>
+           </div>
+ <br>
   <div>
+      <div class="container" >
+          <div class="card rounded-0">
+              <div class="card-header">
+                <h3 class="mb-0">Register User</h3>
+              </div>
+              <div class="card-body">
     <form #form="ngForm">
       <div class="form-group">
-        <label for="firstName" class="control-label">First name:</label>
+        <label for="firstName" class="control-label">First Name:</label>
         <input [(ngModel)]="firstName" name="firstName" type="text">
       <br>
       </div>
@@ -16,23 +35,23 @@
         <input [(ngModel)]="lastName" name="lastName" type="text">
         <br>
       </div>
-      <div class="form-group" [class.has-error]="email.invalid && email.touched"
-        [class.has-success]="email.valid">
-        <label for="emailId" class="control-label"> Email-Id:</label>
-        <input [(ngModel)]="emailId" email #email="ngModel" name="emailId" type="text" required>
-        <span class="help-block" *ngIf="email.errors && email.errors.required">
-          <br>Email is required.
+      <div class="form-group" [class.has-error]="emailId.invalid && emailId.touched"
+        [class.has-success]="emailId.valid">
+        <label for="email" class="control-label"> Email Id :&nbsp; &nbsp; </label>
+        <input [(ngModel)]="email" email #emailId="ngModel" name="emailId" type="text" required>
+        <span class="help-block" *ngIf="emailId.errors && emailId.errors.required && emailId.touched">
+          <br>&nbsp; &nbsp;Email is required.
         </span>
-        <span class="help-block" *ngIf="email.errors && email.errors.email && email.touched">
+        <span class="help-block" *ngIf="emailId.errors && emailId.errors.email && emailId.touched">
          <br>Email is invalid.
         </span>
         <br>
       </div>
       <div class="form-group">
-        <label for="password" class="control-label">Password</label>
+        <label for="password" class="control-label">Password: &nbsp;</label>
         <input [(ngModel)]="password" name="password" type="password" required #pass="ngModel" minlength = "2">
-        <span class="help-block" *ngIf="pass.errors && pass.errors.required">
-           <br>Password is required.
+        <span class="help-block" *ngIf="pass.errors && pass.errors.required && pass.touched">
+           <br> &nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;Password is required.
         </span>
         <span class="help-block" *ngIf="pass.errors && pass.errors.minlength">
            <br>Password should be atleast 2 characters.
@@ -42,5 +61,22 @@
 
     <button class="btn btn-primary" [disabled]="!form.valid" (click)="onClick()"> Register </button>
     </form>
+    </div>
+    </div>
   </div>
+  <div class="row">
+      <div class="col-lg-12">
+        <nav class="nav navbar-expand-lg navbar-light" >
+
+          
+                 <ul class="nav navbar-nav ml-auto" >
+                 <li class="nav-item " ><a class = "nav-link " href="#">Contact </a></li>
+                 <li  class="nav-item"><a class ="nav-link "  href="#">Social</a></li>
+                 </ul> 
+          
+        
+       </nav>
+       </div>
+       
+</div>
 </div>
