--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,3 +1,6 @@
+<p>
+  dashboard works!
+</p>
 <div class="row">
     <div class="col-lg-12">
       <nav class="nav navbar-expand-lg navbar-light" >
@@ -25,7 +28,6 @@
       </tr>
     </thead>
        <tbody>
-          
         <tr>
           <td width="30%">January,2018</td><td > {{ list.January}}</td>
           </tr>
