Code added for mail-summary of expenses.

--- a/src/app/add-expense/add-expense.component.html
+++ b/src/app/add-expense/add-expense.component.html
@@ -60,7 +60,7 @@
                   <br>Category is required.
               </span>
     </div>
-  
+
     <div class="form-group">
       <label for="description" class="control-label">Description : </label>
       <input class="form-control" [(ngModel)]="description" name="description" type="text">
@@ -76,11 +76,10 @@
 <div class="row">
     <div class="col-lg-12">
       <nav class="nav navbar-expand-lg navbar-light" >
-         
                <ul class="nav nav-pills" >
                <li class="nav-item " ><a class = "nav-link " routerLink="/dashboard">Go to dashboard </a></li>
                <li class="nav-item " ><a class = "nav-link " routerLink="/add-expense">Add new expense </a></li>
-               <li class="nav-item " ><a class = "nav-link" routerLink="/view-all-expenses">View all  </a></li>
+               <li class="nav-item " ><a class = "nav-link" routerLink="/view-all-expenses">View all expenses</a></li>
                </ul> 
      </nav>
      </div>
