--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -14,9 +14,8 @@
        </div>
        <div class="card text-center">
             <br>
-            
             <div class="card-body">
-              This application manages expenses.
+              This application manages expenses.It provides fucntions such as adding new expense,deleting expense,view all expenses.
             </div>
 
             <br>
