--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -12,7 +12,12 @@
      </nav>
      </div>
    </div>
-   <div class="card rounded-0 " >
+   
+   <div class="alert alert-danger" *ngIf="errorOccurred" >
+          <strong>Error!! Error message from Server:- {{errorMessage}}</strong>
+    </div>
+  <br>
+    <div class="card rounded-0 " >
       <div class="card-header">
         <h3 class="mb-0">Dashboard</h3>
       </div>
