--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -16,6 +16,11 @@
              </div>
            </div>
  <br>
+
+ <div class="alert alert-danger" *ngIf="errorOccurred" >
+    <strong> Error!! Error message from Server:- {{errorMessage}}</strong>
+</div>
+
   <div>
       <div class="container" >
           <div class="card rounded-0">
