--- a/src/app/view-all-expenses/view-all-expenses.component.html
+++ b/src/app/view-all-expenses/view-all-expenses.component.html
@@ -13,6 +13,10 @@
              </div>
            </div>
            <br>
+
+           <div class="alert alert-danger" *ngIf="errorOccurred" >
+              <strong> Error!! Error message from Server:- {{errorMessage}}</strong>
+          </div>
 <div class="card rounded-0 " >
     <div class="card-header">
       <h3 class="mb-0">Expenses List</h3>
