Code changes added for displaying charts,update user-info, update password and custom validators are added :-amount-validator and confirm-password-validator.

--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -26,3 +26,16 @@ table{
 thead{
     background-color: #e0f7fa;
 }
+.col-lg-12{
+    padding-left: 0%;
+    padding-right: 0%;
+}
+a.dropdown-item:hover{
+    background-color:#91d9fa;
+}
+.dropdown-menu{
+    background-color: #e3f2fd;
+}
+.barChart{
+    height: 300px;
+}
