--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,4 @@
+<div class="container-fluid">
 <div class="row">
         <div class="col-lg-12">
           <nav class="nav navbar-expand-lg navbar-light" >
@@ -15,7 +16,7 @@
        <div class="card text-center">
             <br>
             <div class="card-body">
-              This application manages expenses.It provides fucntions such as adding new expense,deleting expense,view all expenses.
+              This application manages expenses.It provides functions such as adding new expense,deleting expense,view all expenses.
             </div>
 
             <br>
@@ -24,14 +25,12 @@
 <div class="row">
         <div class="col-lg-12">
           <nav class="nav navbar-expand-lg navbar-light" >
-
                    <ul class="nav navbar-nav ml-auto" >
                    <li class="nav-item " ><a class = "nav-link " href="#">Contact </a></li>
                    <li  class="nav-item"><a class ="nav-link "  href="#">Social</a></li>
                    </ul> 
-          
          </nav>
          </div>
          
   </div>
-  
+  </div>
