--- a/src/app/mail-summary/mail-summary.component.html
+++ b/src/app/mail-summary/mail-summary.component.html
@@ -1,4 +1,5 @@
+<div class="container-fluid">
 <div class="alert alert-danger" *ngIf="errorOccurred" >
         <strong> Error!! Error message from Server:- {{errorMessage}}</strong>
    </div>
-  
+  </div>
