--- a/src/app/update-password/update-password.component.css
+++ b/src/app/update-password/update-password.component.css
@@ -1,15 +1,16 @@
-h1{
-    text-align:center; 
-    color:darkslateblue;
-}
-
-span{
-    color :red;
-}
 nav{
     background-color: #e3f2fd
 }
-
+.col-lg-12{
+    padding-left: 0%;
+    padding-right: 0%;
+}
+a.dropdown-item:hover{
+    background-color:#91d9fa;
+}
+.dropdown-menu{
+    background-color: #e3f2fd;
+}
 .inputWithIcon input[type=password]{
     padding-left: 40px;
 }
@@ -23,7 +24,6 @@ nav{
     padding-right: 8px;
     padding-bottom: 8px;
 }
-.col-lg-12{
-    padding-left: 0%;
-    padding-right: 0%;
+span{
+    color :red;
 }
