--- a/src/app/add-expense/add-expense.component.css
+++ b/src/app/add-expense/add-expense.component.css
@@ -3,14 +3,14 @@ h1{
     color:darkslateblue;
 }
 h3{
-    text-align: center;
+    
     color: midnightblue ;
     font-size: 210%;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    
+
 }
-div{
-    text-align:center;
-}
+
 span{
     color :red;
 }
@@ -19,7 +19,7 @@ label{
     font-family: Verdana, Geneva, Tahoma, sans-serif ;
 }
 nav{
-    background-color: #e3f2fd
+    background-color:  #e3f2fd  
 }
 
 well{
@@ -27,4 +27,29 @@ well{
     align-self: center;
    
 }
+.inputWithIcon input[type=text]{
+    padding-left: 40px;
+}
+.inputWithIcon {
+    position: relative;
+}
+.inputWithIcon i{
+    position: absolute;
+    right:0;
+    top :8px;
+    padding-right: 8px;
+    padding-bottom: 8px;
+}
+.col-lg-12{
+    padding-left: 0%;
+    padding-right: 0%;
+}
+a.dropdown-item:hover{
+    background-color: #2196f3;
+}
+.dropdown-menu{
+    background-color: #e3f2fd;
+}
+
+  
 
