--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -5,3 +5,11 @@ well{
     background-color: aqua;
     align-self: center;
 }
+.col-lg-12{
+    padding-left: 0%;
+    padding-right: 0%;
+}
+
+.dropdown-menu{
+    background-color: #e3f2fd;
+}
