--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,4 +1,5 @@
 <!--The content below is only a placeholder and can be replaced.-->
+<div class="container-fluid">
 <title> Registration of user.</title>
 <div>
     <div>
@@ -6,64 +7,87 @@
             <div class="col-lg-12">
               <nav class="nav navbar-expand-lg navbar-light" >
                  <div class="navbar-header">
-                 <a class="navbar-brand" (click)="onhome()">Expense Manager</a>
+                 <a class="navbar-brand " (click)="onhome()">Expense Manager</a>
                  </div>
-                       <ul class="nav navbar-nav ml-auto" >
+                       <ul class="nav nav-pills ml-auto" >
                        <li class="nav-item " ><a class = "nav-link " routerLink="/login">Login </a></li>
-                       <li  class="nav-item"><a class ="nav-link "  routerLink="/register">Sign up</a></li>
+                       <li  class="nav-item"><a class ="nav-link "  routerLink="/register">
+                        <i class="fa fa-user-plus" aria-hidden="true"></i> Sign up</a></li>
                        </ul> 
              </nav>
              </div>
            </div>
  <br>
 
- <div class="alert alert-danger" *ngIf="errorOccurred" >
-    <strong> Error!! Error message from Server:- {{errorMessage}}</strong>
-</div>
-
   <div>
       <div class="container" >
+          <div class="alert alert-danger" *ngIf="errorOccurred" >
+              <strong> Error! Error message:- {{errorMessage}}</strong>
+          </div>
           <div class="card rounded-0">
               <div class="card-header">
                 <h3 class="mb-0">Register User</h3>
               </div>
               <div class="card-body">
     <form #form="ngForm">
+      
       <div class="form-group">
         <label for="firstName" class="control-label">First Name:</label>
-        <input [(ngModel)]="firstName" name="firstName" type="text">
+        
+        <input class="form-control" [(ngModel)]="firstName" name="firstName" type="text">
       <br>
       </div>
+
       <div class="form-group">
         <label for="lastName" class="control-label"> Last Name:</label>
-        <input [(ngModel)]="lastName" name="lastName" type="text">
+        <input class="form-control" [(ngModel)]="lastName" name="lastName" type="text">
         <br>
       </div>
+
       <div class="form-group" [class.has-error]="emailId.invalid && emailId.touched"
         [class.has-success]="emailId.valid">
-        <label for="email" class="control-label"> Email Id :&nbsp; &nbsp; </label>
-        <input [(ngModel)]="email" email #emailId="ngModel" name="emailId" type="text" required>
-        <span class="help-block" *ngIf="emailId.errors && emailId.errors.required && emailId.touched">
+        
+        <label for="email" class="control-label"> Email Id <span>*</span>:&nbsp; &nbsp; </label>
+        
+        <input class="form-control" [(ngModel)]="email" email #emailId="ngModel" name="emailId" type="text" required>
+       
+        <span class="help-block" *ngIf="emailId.errors && emailId.errors.required && emailId.touched
+        ||form.submitted && emailId.errors && emailId.errors.required ">
           <br>&nbsp; &nbsp;Email is required.
         </span>
+       
         <span class="help-block" *ngIf="emailId.errors && emailId.errors.email && emailId.touched">
          <br>Email is invalid.
         </span>
         <br>
+      
       </div>
+      
       <div class="form-group">
-        <label for="password" class="control-label">Password: &nbsp;</label>
-        <input [(ngModel)]="password" name="password" type="password" required #pass="ngModel" minlength = "2">
-        <span class="help-block" *ngIf="pass.errors && pass.errors.required && pass.touched">
-           <br> &nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;Password is required.
+        
+        <label for="password" class="control-label">Password <span>*</span>: </label>
+     
+        <div class="inputWithIcon">
+            <input class="form-control" [(ngModel)]="password" name="password" type="password" required #pass="ngModel" minlength = "6">
+            <i class="fa fa-lock" aria-hidden="true"></i>
+        </div>
+    
+        
+        <span class="help-block" *ngIf="pass.errors && pass.errors.required && pass.touched 
+        || form.submitted && pass.errors && pass.errors.required">
+           <br> &nbsp;Password is required.
         </span>
-        <span class="help-block" *ngIf="pass.errors && pass.errors.minlength">
-           <br>Password should be atleast 2 characters.
+        
+        <span class="help-block" *ngIf="pass.errors && pass.errors.minlength 
+        || form.submitted && pass.errors && pass.errors.minlength">
+           <br>Password should be atleast 6 characters.
         </span>
         <br>
+      
       </div>
-
-    <button class="btn btn-primary" [disabled]="!form.valid" (click)="onClick()"> Register </button>
+  
+    <button class="btn btn-primary" (click)="onClick()"><i class="fa fa-bars" aria-hidden="true"></i>
+      Register </button>
     </form>
     </div>
     </div>
@@ -82,5 +106,6 @@
        </nav>
        </div>
        
+</div>
 </div>
 </div>
